# task_browser

./: .gitignore  README.md
app/: Dockerfile  db.sqlite3  manage.py  pyproject.toml  pytest.ini
app/task_browser/: asgi.py  settings.py  urls.py  wsgi.py
app/tasks/: admin.py  models.py  resolver.py  tests.py  urls.py  views.py
app/tasks/migrations/: 0001_initial.py  0002_alter_tasks_parent.py  0003_alter_tasks_status.py  0004_auto_20210413_1158.py  0005_alter_tasks_status.py  0006_remove_tasks_status.py
app/tasks/templates/: home.html
terraform/: 06_logs.tf  08_ecs.tf  variables.tf
terraform/templates/: task_browser_app.json.tpl
