[tool.poetry]
name = "task_browser"
version = "0.1.0"
description = ""
authors = ["Mani Shirvani <m.shirvani@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
pytest-django = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
