[tool.poetry]
name = "task_browser"
version = "0.1.0"
description = ""
authors = ["Mani Shirvani <m.shirvani@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
pytest-django = "^4.2.0"
gunicorn = "^20.1.0"
whitenoise = "^5.2.0"
django-tables2 = "^2.3.4"
ariadne = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
